# gb-core

./: CMakeLists.txt  README.md
source/: minigb_core.cpp
source/core/: engine_audio.hpp  engine_input.hpp  engine_logging.hpp  engine_renderer.hpp  engine_settings.hpp
source/core/utils/: colors.h
